# airbluez

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
airbluez/: main.py
airbluez/audio/: chord_player.py  engine.py  sample_bank.py  theory.py
airbluez/controls/: right_hand.py  wheel_mapper.py
airbluez/ml/: classifier.py  collect_dataset.py  train.py
airbluez/perception/: camera.py  features.py  landmarker.py  schemas.py
airbluez/state/: app_state.py  reducer.py  store.py
airbluez/ui/: hud.py  overlay.py  wheel.py
docs/: ARCHITECTURE.md  GESTURES.md
scripts/: check_audio.py  debug_landmarks.py  download_models.sh
tests/: test_audio.py  test_classifier.py  test_features.py  test_reducer.py  test_right_hand.py  test_theory.py  test_wheel_mapper.py
