[project]
name = "airbluez"
version = "0.1.0"
description = "Real-time, gesture-driven chord player"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.0",
    "scikit-learn>=1.3.0",
    "pyo>=1.0.5",
    "pygame>=2.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
include = ["airbluez*"]
